logs/cir-cuda/JACOBI2D_jacobi2D.hip.cpp.cir.log
COMMAND: /workspace/llvm-bin/clang-23 -fclangir --gcc-install-dir=/usr/lib/gcc/x86_64-linux-gnu/11 -x hip --hip-path=/opt/rocm-6.3.0 --offload-arch=gfx942 -D__AMDGCN_WAVEFRONT_SIZE=64 -I/root/polybenchGpu/CUDA/JACOBI2D -std=c++17 -O0 -c /root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp -I/root/polybenchGpu/HIP -I/root/polybenchGpu/HIP/JACOBI2D -o /tmp/JACOBI2D_jacobi2D.hip.cpp.cir.o

/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:137:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  137 |         hipMalloc(&Agpu, N * N * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:138:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  138 |         hipMalloc(&Bgpu, N * N * sizeof(DATA_TYPE));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:139:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  139 |         hipMemcpy(Agpu, A, N * N * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:140:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  140 |         hipMemcpy(Bgpu, B, N * N * sizeof(DATA_TYPE), hipMemcpyHostToDevice);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:151:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  151 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:153:3: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  153 |                 hipDeviceSynchronize();
      |                 ^~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:161:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  161 |         hipMemcpy(A_outputFromGpu, Agpu, sizeof(DATA_TYPE) * N * N, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:162:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  162 |         hipMemcpy(B_outputFromGpu, Bgpu, sizeof(DATA_TYPE) * N * N, hipMemcpyDeviceToHost);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:164:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  164 |         hipFree(Agpu);
      |         ^~~~~~~~~~~~~
/root/polybenchGpu/HIP/JACOBI2D/jacobi2D.hip.cpp:165:2: warning: ignoring return value of type 'hipError_t' declared with 'nodiscard' attribute [-Wunused-value]
  165 |         hipFree(Bgpu);
      |         ^~~~~~~~~~~~~
loc("/opt/rocm-6.3.0/include/hip/amd_detail/hip_assert.h":70:3): error: 'cir.cast' op result type address space does not match the address space of the operand
fatal error: CIR module verification error before running CIR-to-CIR passes
clang-23: error: clang frontend command failed with exit code 70 (use -v to see invocation)
clang version 23.0.0git (git@github.com:llvm/llvm-project.git f30c3bb2647d4385c9d2035b9a661ecc0bcca813)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /workspace/llvm-bin
Build config: +assertions
clang-23: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang-23: note: diagnostic msg: /tmp/jacobi2D-gfx942-82728e.hip
clang-23: note: diagnostic msg: /tmp/jacobi2D-48bc42.hip
clang-23: note: diagnostic msg: /tmp/jacobi2D-gfx942-82728e.sh
clang-23: note: diagnostic msg: 

********************
